app/renderer/ui/app.global.scss
@font-face {
  font-family: "Titillium Web";
  font-style: normal;
  font-weight: normal;
  src: url("~fonts/Titillium_Web/TitilliumWeb-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "Titillium Web";
  font-style: normal;
  font-weight: bold;
  src: url("~fonts/Titillium_Web/TitilliumWeb-Bold.ttf") format("truetype");
}

@font-face {
  font-family: "Titillium Web";
  font-style: italic;
  font-weight: normal;
  src: url("~fonts/Titillium_Web/TitilliumWeb-Italic.ttf") format("truetype");
}

@font-face {
  font-family: "Titillium Web";
  font-style: italic;
  font-weight: bold;
  src: url("~fonts/Titillium_Web/TitilliumWeb-BoldItalic.ttf") format("truetype");
}

@font-face {
  font-family: "Titillium Web";
  font-style: normal;
  font-weight: 600;
  src: url("~fonts/Titillium_Web/TitilliumWeb-SemiBold.ttf") format("truetype");
}

@font-face {
  font-family: "Titillium Web";
  font-style: italic;
  font-weight: 600;
  src: url("~fonts/Titillium_Web/TitilliumWeb-SemiBoldItalic.ttf") format("truetype");
}

@font-face {
  font-family: "Titillium Web";
  font-style: normal;
  font-weight: lighter;
  src: url("~fonts/Titillium_Web/TitilliumWeb-Light.ttf") format("truetype");
}

@font-face {
  font-family: "Titillium Web";
  font-style: italic;
  font-weight: lighter;
  src: url("~fonts/Titillium_Web/TitilliumWeb-LightItalic.ttf") format("truetype");
}

@font-face {
  font-family: "Titillium Web";
  font-style: normal;
  font-weight: 900;
  src: url("~fonts/Titillium_Web/TitilliumWeb-Black.ttf") format("truetype");
}

:global {
  @import "~font-awesome/css/font-awesome.css";
  @import "theme";
  @import "colors";
  @import "reset";
  @import "fonts";

  html {
    box-sizing: border-box;
  }

  p {
    @extend %font16;

    color: $font-color-dark;
  }

  pre,
  .pre-alike {
    font-family: "Lucida Console", Monaco, monospace;
  }

  body {
    font-family: $font-family;
    height: 100vh;
    max-height: 100vh;
    max-width: 100vw;
    position: relative;

    .ant-select-selection-selected-value {
      float: none;
      padding-top: 3px;
    }

    .ant-select-selection__rendered {
      align-items: center;
      display: flex;
      height: 48px;
    }

    .ant-select-selection {
      height: 48px;
    }

    .ant-input {
      font-family: $font-family;
    }

    .ant-list {
      font-family: $font-family;
    }

    .ant-message-notice-content {
      background: $toast-background;
      border-radius: 8% / 50%;
      opacity: 0.8;
      padding: 25px 50px 25px 50px;

      .anticon {
        display: none;
      }
    }

    .ant-card {
      color: $font-color-dark;
      font: inherit;
    }

    // DO NOT REMOVE OUT OF BODY! See issue #203
    .ant-card-head {
      align-items: center;
      background: linear-gradient(to right, $purple-6, $blue-6);
      color: $grey-1;
      display: flex;
      height: 100px;
      padding: 0 40px;
    }

    .ant-card-head-title {
      @extend %font20;

      color: $grey-1;
    }

    .ant-card-body {
      padding: 0;
    }

    .ant-dropdown-menu {
      border: 1px solid $blue-6;
      border-radius: 4px 0 4px 4px;
      margin-top: -5px;
      padding: 0;
    }

    .ant-dropdown-menu-item {
      color: $grey-9;
      font-family: $font-family;
      font-weight: 600;
      padding: 10px 20px;
    }
  }
}

